Modifikovanje pocetne stranice

--- a/index.html
+++ b/index.html
@@ -30,30 +30,30 @@
         <!-- Main section header START -->
         <header class="header-main">
             <nav class="navbar container">
-                <ul>
-                    <li><a href="index.html">Početna</a></li>
-                    <li><a href="radovi.html">Radovi</a></li>
-                    <li><a href="karijera.html">Karijera</a></li>
-                    <li><a href="kontakt.html">Kontakt</a></li>
+                <ul class="navigacija nav">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Početna</a></li>
+                    <li class="nav-item"><a class="nav-link" href="radovi.html">Radovi</a></li>
+                    <li class="nav-item"><a class="nav-link" href="karijera.html">Karijera</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
         </header>
         <!-- Main section header END-->
         <!-- Article section START -->
         <section>
-            <div class="container">
-                <div class="row">
-                    <article class="col">
+            <div class="container containermain">
+                <div class="row cssarticle1">
+                    <article class="col col-xs-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
                         <h2>Gradimo enterijer za užitak</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla soluta eligendi iure ipsa, inventore
                             non ab. Odit reprehenderit ipsa inventore voluptatibus libero temporibus? Sunt eum velit fugit accusantium
                             dolorum commodi laudantium id earum quidem quae, dolore ipsum eaque ratione eligendi explicabo excepturi
                             maxime blanditiis!</p>
-                        <a href="radovi.html">Saznaj više</a>
+                        <a class="btn btn-danger" href="radovi.html">Saznaj više</a>
                     </article>
                 </div>
                 <div class="row">
-                    <article class="col">
+                    <article class="col col-xs-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
                         <img class="img-radovi img-fluid" src="./img/radovi.jpg" alt="">
                     </article>
                 </div>
@@ -65,7 +65,7 @@
     <!-- Footer START -->
     <footer class="main-footer">
         <div class="bdfooter container">
-            <small>
+            <small class="col col-xs-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
                 <p>
                     &copy; BelDeko, est. 2017
                 </p>
