Pocetna gotova. Popraviti bkg-img i dodati tekst

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="discription" content="Da li su u pitanju rigips radovi, molerski radovi ili stolarija: Mi nudimo sveobuhvatnu uslugu u Doboju ali i šire. Nova gradnja ili renoviranja mi smo najefikasnije rješenje">
+    <meta name="discription" content="Da li su u pitanju rigips radovi, molerski radovi ili stolarija: Mi nudimo sveobuhvatnu uslugu u Doboju ali i šire. Nova gradnja ili renoviranja mi smo najefikasnije rješenje. Nudimo posao i obuku.">
     <title>BelDeko|Suva gradnja</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +65,7 @@
     <!-- Footer START -->
     <footer class="main-footer">
         <div class="bdfooter container">
-            <small class="col col-xs-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
+            <small class="footertxt col col-xs-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
                 <p>
                     &copy; BelDeko, est. 2017
                 </p>
