--- a/radovi.html
+++ b/radovi.html
@@ -45,7 +45,7 @@
             </header>
             <section class="container containermain">
                 <article class="row">
-                    <div class=" naslov-usluge col-xs-5 col-sm-5 col-md-4 col-lg-4 col-xl-4">
+                    <div class="naslov-usluge col-xs-5 col-sm-5 col-md-4 col-lg-4 col-xl-4">
                         <h1>Naše usluge</h1>
                     </div>
                 </article>
@@ -83,3 +83,5 @@
         </div>
     </footer>
     <!-- Footer END -->
+</body>
+</html>
